--- a/gb/20/10/15/n12477100.md
+++ b/gb/20/10/15/n12477100.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ulgaam3820/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ulgaam3820/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ulgaam3820/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ulgaam3820/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ulgaam3820/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ulgaam3820/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ulgaam3820/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ulgaam3820/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ulgaam3820/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ulgaam3820/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ulgaam3820/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ulgaam3820/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ulgaam3820/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ulgaam3820/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ulgaam3820/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ulgaam3820/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ulgaam3820/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ulgaam3820/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ulgaam3820/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ulgaam3820/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ulgaam3820/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ulgaam3820/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ulgaam3820/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ulgaam3820/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>成人学生如何卓有成效的管理时间</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/04/Fotolia_188338961_Subscription_L-600x400.jpg" />
 <h6>成人学生要在繁忙的工作日程中实现学习目标，需要学习如何卓有成效的管理时间。（Fotolia）
 </h6>
 <hr>
-<p>【大纪元2020年10月15日讯】（大纪元记者李路明澳洲悉尼编译报导）作为一名母亲，是很难找到时间<ahref="https://github.com/ulgaam3820/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>的。下面这些技巧将帮助<ahref="https://github.com/ulgaam3820/djy/blob/master/gb/tag/%E6%88%90%E4%BA%BA%E5%AD%A6%E7%94%9F.md#1">成人学生</a>实现<ahref="https://github.com/ulgaam3820/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>目标，并为自己争取到时间。这篇文章是由格里菲斯大学赞助。</p>
+<p>【大纪元2020年10月15日讯】（大纪元记者李路明澳洲悉尼编译报导）作为一名母亲，是很难找到时间<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>的。下面这些技巧将帮助<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%88%90%E4%BA%BA%E5%AD%A6%E7%94%9F.md#1">成人学生</a>实现<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>目标，并为自己争取到时间。这篇文章是由格里菲斯大学赞助。</p>
 <p>普通高等学校学生的面貌正在发生变化，这里已不是应届毕业生的天下。根据澳大利亚统计局的数据，2011年高等教育毕业生中，有41％的学生是成年学生，女性学生所占比例达到57%，有67％的人一边工作一边学习。一边工作一边学习，或者兼顾家庭的同时进行学习，亦或者两者都要照顾会带来一系列挑战，而这些挑战对应届毕业生并不存在。</p>
-<p><ahref="https://github.com/ulgaam3820/djy/blob/master/gb/tag/%E6%88%90%E4%BA%BA%E5%AD%A6%E7%94%9F.md#1">成人学生</a>的优势是更成熟，这意味着有足够的能力应对这些挑战。由于日复一日的演练，您已精通了多种角色。如果您担心如何让学习生活适应繁忙的日程安排，则可以使用以下三种策略：时间表学习、分散学习和偷空学习。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%88%90%E4%BA%BA%E5%AD%A6%E7%94%9F.md#1">成人学生</a>的优势是更成熟，这意味着有足够的能力应对这些挑战。由于日复一日的演练，您已精通了多种角色。如果您担心如何让学习生活适应繁忙的日程安排，则可以使用以下三种策略：时间表学习、分散学习和偷空学习。</p>
 <h2>时间表学习</h2>
 <p>社会学家约翰·罗宾逊（John Robinson）认为，作为忙碌的上班族妈妈，您每周有30个小时的闲暇时间。如果您现在极度怀疑并想着“那30个小时到底在哪里？” 请相信我，我与您站在一起。罗宾逊（Robinson）通过多年研究人们的时间日记得出了这一结论。他发现我们认为自己花费的时间与实际花费的时间很不匹配。</p>
 <p>如果您打算开始学习，第一步是认真评估自己的时间。记下您每天实际如何花费时间，然后根据您需要完成的任务来分配学习时间，从而给自己一个大致的时间表。格里菲斯大学（Griffith University）提供的免费学习计划工具很适合做出时间表。只需将您当前的活动拖放到这个时间空隙中，这个学习计划工具就会在您的时间表中分配学习时间。请根据需要对其进行灵活调整，以确保安排一些休息时间，并且让您的学习计划能够围绕现有的任务进行。</p>
@@ -33,48 +33,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/12/9/14/n3682449.md#1">谈成年人学习第二语言</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/16/5/11/n7882900.md#1">纽约76学生参加图书馆成人教育 获高中毕业</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/16/5/23/n7923512.md#1">婴幼儿大脑为何可以同时学习两种语言</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/17/8/15/n9532355.md#1">成人教育免费不够望开发缅街教育中心</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/17/8/29/n9577644.md#1">澳洲热门大学学生就业起薪排名不佳</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/17/9/14/n9632611.md#1">孩子需要学画画吗？（上）</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/19/9/3/n11496844.md#1">加拿大今年7.5万成人学生重返大学</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/19/9/20/n11535490.md#1">免费成人学习补习班</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/15/n12477067.md#1">发展孩子的算数能力：适合0-4岁</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/13/n12472256.md#1">科廷大学施工建筑物坍塌?一死两伤</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/9/14/n3682449.md#1">谈成年人学习第二语言</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/5/11/n7882900.md#1">纽约76学生参加图书馆成人教育 获高中毕业</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/5/23/n7923512.md#1">婴幼儿大脑为何可以同时学习两种语言</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/8/15/n9532355.md#1">成人教育免费不够望开发缅街教育中心</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/8/29/n9577644.md#1">澳洲热门大学学生就业起薪排名不佳</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/9/14/n9632611.md#1">孩子需要学画画吗？（上）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/9/3/n11496844.md#1">加拿大今年7.5万成人学生重返大学</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/9/20/n11535490.md#1">免费成人学习补习班</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13609689.md#1">昆州增加幼托行业拨款 4万儿童受益</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13604124.md#1">可在家进行的儿童趣味学习活动</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262822.md#1" target="_blank">【征文】兰音：传统社会中妻子的真实地位</a></li><li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/4/n10023623.md#1" target="_blank">车祸后30年行走困难 读《转法轮》4个月“开跑”</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/14/n9955432.md#1" target="_blank">文革中自杀的几个名人（3）红岩作者罗广斌</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/25/n10932219.md#1" target="_blank">褒奖法轮功 推崇普世价值</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/9/26/n12433081.md#1">奇人预言“靖康之难”：天星不照 火龙骑日</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/8/n12462258.md#1">香港一名街头歌手的故事</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/10/n12466587.md#1">一群美军士兵称 在韩战时遭UFO以光线攻击</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/10/n12466299.md#1">女子休克时灵魂出窍 看见医生在抢救自己</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/9/24/n12428110.md#1">“自写履历”有多难？醉入冥府见奇闻</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/14/n12474227.md#1">【拍案惊奇】希拉里电邮 再曝王立军出逃内幕</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/14/n12476476.md#1">【新闻看点】习南巡两提法泄危机 李克强发警讯</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/14/n12475459.md#1">【珍言真语】郑敬基：良知最要紧 盼港星齐发声</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/13/n12473630.md#1">习要军队备战 分析：中共攻台可能性与时间</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/10/n12465951.md#1">【独家】密件泄中共预测秋冬疫情爆发情形</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/12/n12471034.md#1">【新闻看点】五中全会前 习频频动作泄2大恐惧</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/12/n12469576.md#1">抗癌成功首晒全家福照 余苑绮灿笑：终于达成</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/12/n12471021.md#1">BTS提韩战惹怒五毛 中共战狼发言人罕见灭火</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/12/n12471315.md#1">胡歌蹲下来接受采访 暖心举动获称赞</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/12/n12470792.md#1">被贴“高圆圆老公”标签 赵又廷吐露感人心声</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/13/n12473463.md#1">发文为青岛加油引关注 黄晓明探亲遭遇疫情</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/12/n12470660.md#1">罹癌不肯医治 江坤俊：给我半年 我还你50年</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/12/n12469663.md#1">被主人打毒针并活埋 小狗自己挖开坟墓逃出</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/12/n12470563.md#1">70岁仍有20岁身材 日医：简单的减糖餐是火锅</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/13/n12472039.md#1">日男夹不到娃娃怒报警 店员试300次也失败</a></li>
-<li><a href="https://github.com/ulgaam3820/djy/blob/master/gb/20/10/13/n12471784.md#1">傻傻分不清？ 法国夫妇买宠物猫 结果是虎崽</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ulgaam3820/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ulgaam3820/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/15/n12477100.htm">成人学生如何卓有成效的管理时间</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/15/n12477100.htm">成人学生如何卓有成效的管理时间</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ulgaam3820/djy/blob/master/gb/20/10/15/n12477100.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ulgaam3820/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ulgaam3820/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ulgaam3820/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ulgaam3820/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ulgaam3820/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/10/15/n12477100.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
